spacing fix

--- a/css/normal.css
+++ b/css/normal.css
@@ -51,7 +51,7 @@ background-repeat: no-repeat;
   max-width: 38em;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 .details > p {
@@ -62,7 +62,7 @@ background-repeat: no-repeat;
 .details > h2 {
   font-size: 1.2em;
   font-weight: bold;
-  margin: 2em 0 1em 0;
+  margin: 1em 0 1em 0;
 }
 
 section > h1 {
